--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
+  /* text-align: center; */
+  width: 100%;
+  height: 100vh;
+  /* border: 1px solid red; */
+  overflow: hidden;
 }
 
 .App-logo {
@@ -35,4 +43,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.nonDisplay {
+  display: none;
 }
